checkout layoutshift fix

--- a/blocks/commerce-checkout/commerce-checkout.css
+++ b/blocks/commerce-checkout/commerce-checkout.css
@@ -1,7 +1,7 @@
 
 
 .commerce-checkout {
-  min-height: 2500px;
+  min-height: 2000px;
 }
 
 /* stylelint-disable selector-class-pattern */
